--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ a {
     @apply py-8 px-6
            sm:px-8
            md:px-9
-           lg:px-10
+           lg:px-14 lg:py-20
           text-gray-900
           text-lg
   }
@@ -60,7 +60,7 @@ a {
 
 /* navigatin start */
   .logo-style{
-    @apply mr-3 h-24 w-24
+    @apply mr-3 h-20 w-20
           sm:h-24 sm:w-24 
           lg:h-28 lg:w-28 
   }
